<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.addstory.AddStoryActivity">

    <ImageView
        android:id="@+id/addStoryIMG"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:contentDescription="@string/title_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />

    <EditText
        android:id="@+id/addStoryEDTDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border_line"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/title_description"
        android:inputType="textMultiLine|textPersonName|textCapSentences"
        android:minLines="5"
        android:padding="8dp"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addStoryIMG"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/addStoryTVCorrdinate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/data_coordinate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addStoryEDTDescription" />

    <Button
        android:id="@+id/addStoryBTNGetCoordinate"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_get_coordinate"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addStoryTVCorrdinate" />

    <Button
        android:id="@+id/addStoryBTNUpload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addStoryBTNGetCoordinate" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addStoryFABDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/btn_delete"
        android:focusable="true"
        android:visibility="gone"
        app:backgroundTint="@android:color/holo_red_light"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/addStoryIMG"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete_24" />
</androidx.constraintlayout.widget.ConstraintLayout>