<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.detailstory.DetailStoryActivity">

    <com.ortiz.touchview.TouchImageView
        android:id="@+id/detailStoryIMG"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:contentDescription="@string/title_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_main_gradient"
        android:transitionName="photo"/>


    <TextView
        android:id="@+id/detailStoryTVDate"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/abeezee"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/detailStoryIMG"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SmallSp,TextContrastCheck"
        tools:text="@string/title_created_at" />

    <TextView
        android:id="@+id/detailStoryTVName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/abeezee"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailStoryIMG"
        tools:text="@string/title_name"
        android:transitionName="name"/>

    <TextView
        android:id="@+id/detailStoryTVDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/abeezee"
        android:maxLines="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailStoryTVName"
        tools:text="@string/title_description"
        android:transitionName="description" />

    <TextView
        android:id="@+id/detailStoryTVCoordinate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/abeezee"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailStoryTVDescription"
        tools:text="@string/title_coordinate" />

</androidx.constraintlayout.widget.ConstraintLayout>